<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guni_pink_logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="false"
            android:padding="20dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/User_name"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="51dp"
                android:layout_marginEnd="67dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView8" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="53dp"
                android:layout_marginEnd="67dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="126dp"
                android:layout_marginEnd="68dp"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView11" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="68dp"
                android:layout_marginBottom="11dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                app:layout_constraintBottom_toTopOf="@+id/editTextText7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/editTextText5"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="88dp"
                android:layout_marginEnd="61dp"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="49dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/black"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/Phone_number"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="41dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/City"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/Email"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/Password"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/Confirm_password"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/textView13" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:elevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialCardView">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/Register"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/Do_acount"
        app:layout_constraintEnd_toStartOf="@id/loginButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="#D93D90"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14" />


</androidx.constraintlayout.widget.ConstraintLayout>
